--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,8 +47,8 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: public.ecr.aws/r6f0o3y0
-          ECR_REPOSITORY: text-s
+          ECR_REGISTRY: public.ecr.aws
+          ECR_REPOSITORY: r6f0o3y0/text-s
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -72,7 +72,7 @@ jobs:
       - name: Pull latest images
         run: |
          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest
-       
+
       - name: Run Docker Image to serve users
         run: |
          docker run -d -p 8080:8080 --name=texts -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  $ECR_REGISTRY/$ECR_REPOSITORY:latest
